tests/ui/diagnostic_namespace/on_type_error/report_warning_on_non_adt.stderr
warning: `#[diagnostic::on_type_error]` attribute cannot be used on functions
  --> $DIR/report_warning_on_non_adt.rs:3:1
   |
LL | #[diagnostic::on_type_error(note = "custom on_type_error note: not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[diagnostic::on_type_error]` can only be applied to data types
   = note: `#[warn(misplaced_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: `#[diagnostic::on_type_error]` attribute cannot be used on statics
  --> $DIR/report_warning_on_non_adt.rs:7:1
   |
LL | #[diagnostic::on_type_error(note = "custom on_type_error note: not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[diagnostic::on_type_error]` can only be applied to data types

warning: `#[diagnostic::on_type_error]` attribute cannot be used on modules
  --> $DIR/report_warning_on_non_adt.rs:11:1
   |
LL | #[diagnostic::on_type_error(note = "custom on_type_error note: not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[diagnostic::on_type_error]` can only be applied to data types

warning: `#[diagnostic::on_type_error]` attribute cannot be used on traits
  --> $DIR/report_warning_on_non_adt.rs:15:1
   |
LL | #[diagnostic::on_type_error(note = "custom on_type_error note: not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[diagnostic::on_type_error]` can only be applied to data types

warning: `#[diagnostic::on_type_error]` attribute cannot be used on type aliases
  --> $DIR/report_warning_on_non_adt.rs:19:1
   |
LL | #[diagnostic::on_type_error(note = "custom on_type_error note: not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[diagnostic::on_type_error]` can only be applied to data types

warning: `#[diagnostic::on_type_error]` attribute cannot be used on inherent methods
  --> $DIR/report_warning_on_non_adt.rs:26:5
   |
LL |     #[diagnostic::on_type_error(note = "custom on_type_error note: not an ADT")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[diagnostic::on_type_error]` can only be applied to data types

error[E0308]: mismatched types
  --> $DIR/report_warning_on_non_adt.rs:38:25
   |
LL |     let _: Valid<i32> = SomeStruct;
   |            ----------   ^^^^^^^^^^ expected `Valid<i32>`, found `SomeStruct`
   |            |
   |            expected due to this
   |
   = note: custom on_type_error note: expected `Valid<i32>`, found `SomeStruct`
   = note: expected struct `Valid<i32>`
              found struct `SomeStruct`

error: aborting due to 1 previous error; 6 warnings emitted

For more information about this error, try `rustc --explain E0308`.
